# socks6

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  SECURITY.md  docker-compose.yml  server.crt  server.key  sni-exclude.txt
.github/workflows/: ci.yml  rust.yml
docker/: client-entrypoint.sh  client.env.example  entrypoint.sh  env.example
docs/: SOCKS6.md
src/: config.rs  debug_agent.rs  lib.rs  main.rs  reality.rs  relay.rs  server.rs  sni.rs  socks5.rs  socks6.rs  udp_relay.rs
